...
    }
}

@Preview
@Composable
private fun AboutScreenPreview() {
    AppTheme { AboutScreen(appVersionName = "2.5.0", onNavigateUp = {}, onNavigateToAcknowledgements = {}) }
}

